add MNIST-ResNet export and slightly change file format

--- a/export.ipynb
+++ b/export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "8c4f6d8b",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "98446256",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e8ed7cab",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "74840945",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "de6ec66e",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "76139411",
    "metadata": {},
    "outputs": [],
@@ -138,25 +138,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 127,
    "id": "8e29ffa9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
     "def export_model(model, file_path = \"model.bin\"):\n",
-    "    ''' Export the model to filepath '''\n",
+    "    '''\n",
+    "    Export the quantized model to a file\n",
+    "    The data inside the file follows this order:\n",
+    "    1. The number of: classes, each type of layers and parameters\n",
+    "    2. CNN, FC and BN layers' configuration\n",
+    "    3. CNN, FC and BN layers' parameters\n",
+    "    '''\n",
     "    f = open(file_path, \"wb\")\n",
     "\n",
     "    # write model config\n",
     "    conv_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Conv2d)]\n",
     "    n_conv = len(conv_layers)\n",
+    "    linear_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Linear)]\n",
+    "    n_linear = len(linear_layers)\n",
     "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm2d)]\n",
     "    n_bn = len(bn_layers)\n",
-    "    linear_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Linear)]\n",
-    "    nlinear = len(linear_layers)\n",
     "    n_classes = 10\n",
-    "    header = struct.pack(\"iiii\", n_classes, n_conv, n_bn, nlinear)\n",
+    "    header = struct.pack(\"4i\", n_classes, n_conv, n_linear, n_bn)\n",
     "    f.write(header)\n",
     "    # write layers' config\n",
     "    offset = 0 # the number of bytes in float32 (i.e. offset 1 = 4 bytes)\n",
@@ -171,30 +177,26 @@
     "        else:\n",
     "            offset += t_offset  # No biases\n",
     "\n",
+    "    for layer in linear_layers:\n",
+    "        f.write(struct.pack(\"3i\", layer.in_features, layer.out_features, offset))\n",
+    "        offset += layer.in_features * layer.out_features + layer.out_features\n",
+    "\n",
     "    for layer in bn_layers:\n",
     "        f.write(struct.pack(\"2i\", layer.num_features, offset))\n",
     "        # set offset to the start of next layer\n",
     "        # weight, bias, running_mean, running_var\n",
     "        offset += 4 * layer.num_features\n",
     "\n",
-    "    for layer in linear_layers:\n",
-    "        f.write(struct.pack(\"3i\", layer.in_features, layer.out_features, offset))\n",
-    "        offset += layer.in_features * layer.out_features + layer.out_features\n",
-    "\n",
     "    # write the weights and biases of the model\n",
-    "    for layer in conv_layers:\n",
+    "    for layer in [*conv_layers, *linear_layers]:\n",
     "        for p in layer.parameters():\n",
     "            serialize_fp32(f, p)\n",
-    "    \n",
+    "\n",
     "    for layer in bn_layers:\n",
     "        for p in layer.parameters():\n",
     "            serialize_fp32(f, p)\n",
     "        serialize_fp32(f, layer.running_mean)\n",
     "        serialize_fp32(f, layer.running_var)\n",
-    "\n",
-    "    for layer in linear_layers:\n",
-    "        for p in layer.parameters():\n",
-    "            serialize_fp32(f, p)\n",
     "\n",
     "    f.close()\n",
     "    print(f\"wrote {file_path}\")\n",
@@ -204,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "fdbbe72d",
    "metadata": {},
    "outputs": [
@@ -212,7 +214,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wrote /tmp/.test.bin\n"
+      "wrote /tmp/.test.bin\n",
+      "228\n"
      ]
     }
    ],
@@ -225,8 +228,9 @@
     "    def __init__(self):\n",
     "        super(TestModel, self).__init__()\n",
     "        self.nclasses = 4\n",
-    "        self.conv1 = nn.Conv2d(1, 1, kernel_size=3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(1, 1, kernel_size=3, padding=1)\n",
+    "        self.conv1 = nn.Conv2d(1, 1, kernel_size=3, padding=1, bias=False)\n",
+    "        self.conv2 = nn.Conv2d(1, 1, kernel_size=3, padding=1, bias=False)\n",
+    "        self.bn = nn.BatchNorm2d(1)\n",
     "        self.fc1 = nn.Linear(3, 2)\n",
     "        self.fc2 = nn.Linear(2, 1)\n",
     "\n",
@@ -235,14 +239,14 @@
     "def test_export_model():\n",
     "    fname = '/tmp/.test.bin'\n",
     "    export_model(m, fname)\n",
-    "    assert os.path.getsize(fname)==208 # manucally calc from export_model()\n",
+    "    assert os.path.getsize(fname)==228 # manucally calc from export_model()\n",
     "\n",
     "test_export_model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 130,
    "id": "71f18915",
    "metadata": {},
    "outputs": [],
@@ -265,20 +269,24 @@
     "    '''\n",
     "    Export the quantized model to a file\n",
     "    The data inside the file follows this order:\n",
-    "    1. The number of classes, CNN layers, and FC layers, parameters.\n",
-    "    2. CNN and FC layers' configuration.\n",
-    "    3. CNN and FC layers' quantized parameters.\n",
-    "    4. CNN and FC layers' scaling factors.\n",
+    "    1. The number of: classes, each type of layers and parameters\n",
+    "    2. CNN, FC and BN layers' configuration\n",
+    "    3. CNN and FC layers' quantized parameters\n",
+    "    4. CNN and FC layers' scaling factors\n",
+    "    5. BN layers' parameters\n",
     "    '''\n",
     "    model = torch.load(model_path)\n",
     "    f = open(file_path, \"wb\")\n",
     "    # write model config\n",
-    "    conv_layers = [model.conv1, model.conv2]\n",
+    "    conv_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Conv2d)]\n",
     "    nconv = len(conv_layers)\n",
-    "    linear_layers = [model.fc1, model.fc2]\n",
+    "    linear_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.Linear)]\n",
     "    nlinear = len(linear_layers)\n",
-    "    nparameters = sum(p.numel() for p in model.parameters())\n",
-    "    header = struct.pack(\"4i\", model.nclasses, nconv, nlinear, nparameters)\n",
+    "    bn_layers = [layer for layer in model.modules() if isinstance(layer, torch.nn.BatchNorm2d)]\n",
+    "    nbn = len(bn_layers)\n",
+    "    nclasses = 10\n",
+    "    nparameters = sum(p.numel() for layer in [*conv_layers, *linear_layers] for p in layer.parameters())\n",
+    "    header = struct.pack(\"5i\", nclasses, nconv, nlinear, nbn, nparameters)\n",
     "    f.write(header)\n",
     "    # write layers' config\n",
     "    qoffset = 0 # offset for quantized parameters\n",
@@ -287,16 +295,14 @@
     "    for layer in conv_layers:\n",
     "        # calculates group sizes for weights and biases\n",
     "        gs_weight = calculate_groupsize(layer.in_channels * layer.kernel_size[0]**2, gs)\n",
-    "        gs_bias = calculate_groupsize(layer.out_channels, gs)\n",
     "        group_sizes.append(gs_weight)\n",
-    "        group_sizes.append(gs_bias)\n",
     "\n",
-    "        f.write(struct.pack(\"9i\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
-    "                layer.in_channels, layer.out_channels, qoffset, soffset, gs_weight, gs_bias))\n",
+    "        f.write(struct.pack(\"8i\", layer.kernel_size[0], layer.stride[0], layer.padding[0],\n",
+    "                layer.in_channels, layer.out_channels, qoffset, soffset, gs_weight))\n",
     "        # set offsets to the start of next layer\n",
     "        nweights = layer.out_channels * layer.in_channels * layer.kernel_size[0]**2\n",
-    "        qoffset += nweights + layer.out_channels\n",
-    "        soffset += nweights // gs_weight + layer.out_channels // gs_bias\n",
+    "        qoffset += nweights\n",
+    "        soffset += nweights // gs_weight\n",
     "\n",
     "    for layer in linear_layers:\n",
     "        gs_weight = calculate_groupsize(layer.in_features, gs)\n",
@@ -311,6 +317,12 @@
     "        qoffset += nweights + layer.out_features\n",
     "        soffset += nweights // gs_weight + layer.out_features // gs_bias\n",
     "\n",
+    "    for layer in bn_layers:\n",
+    "        f.write(struct.pack(\"2i\", layer.num_features, soffset))\n",
+    "        # weight, bias, running_mean, running_var\n",
+    "        soffset += 4 * layer.num_features\n",
+    "\n",
+    "    # write layers' parameters\n",
     "    ew = []\n",
     "    scaling_factors = []\n",
     "    i = 0\n",
@@ -326,6 +338,10 @@
     "    for s in scaling_factors:\n",
     "        serialize_fp32(f, s) # save scale factors\n",
     "\n",
+    "    for layer in bn_layers:\n",
+    "        for p in [layer.weight, layer.bias, layer.running_mean, layer.running_var]:\n",
+    "            serialize_fp32(f, p)\n",
+    "\n",
     "    # print the highest error across all parameters, should be very small, e.g. O(~0.001)\n",
     "    ew.sort(reverse=True)\n",
     "    print(f\"max quantization group error across all weights: {ew[0][0]}\")\n",
@@ -335,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 122,
    "id": "8e696dc1",
    "metadata": {},
    "outputs": [
@@ -344,16 +360,15 @@
      "output_type": "stream",
      "text": [
       "wrote /tmp/.test.bin\n",
-      "Quantized (1, 1, 3, 3) to Q8_0 with max error 3.725290298461914e-09\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0009891092777252197\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0011387169361114502\n",
+      "Quantized (2, 3) to Q8_0 with max error 0.0009633302688598633\n",
+      "Quantized (2,) to Q8_0 with max error 0.0006998032331466675\n",
+      "Quantized (1, 2) to Q8_0 with max error 0.0003432333469390869\n",
       "Quantized (1,) to Q8_0 with max error 0.0\n",
-      "Quantized (1, 1, 3, 3) to Q8_0 with max error 1.4901161193847656e-08\n",
-      "Quantized (1,) to Q8_0 with max error 0.0\n",
-      "Quantized (2, 3) to Q8_0 with max error 0.0\n",
-      "Quantized (2,) to Q8_0 with max error 0.0\n",
-      "Quantized (1, 2) to Q8_0 with max error 0.0\n",
-      "Quantized (1,) to Q8_0 with max error 0.0\n",
-      "max quantization group error across all weights: 1.4901161193847656e-08\n",
-      "wrote /tmp/.test.bin\n"
+      "max quantization group error across all weights: 0.0011387169361114502\n",
+      "wrote /tmp/.test.bin\n",
+      "213\n"
      ]
     }
    ],
@@ -369,9 +384,9 @@
     "# Unit test for export_modelq8()\n",
     "def test_export_modelq8():\n",
     "    fname = '/tmp/.test.bin'\n",
-    "    test_export_model()\n",
-    "    export_modelq8(file_path=fname, gs=1)\n",
-    "    assert os.path.getsize(fname)==291\n",
+    "    export_model(m, fname)\n",
+    "    export_modelq8(file_path=fname, gs=10)\n",
+    "    assert os.path.getsize(fname)==213\n",
     "\n",
     "test_export_modelq8()"
    ]
