train ResNet18 on Imagenette dataset

--- a/train.ipynb
+++ b/train.ipynb
@@ -18,70 +18,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 220,
    "id": "4a66b3ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#|export\n",
     "import numpy as np\n",
-    "import torchvision\n",
-    "from torchvision import transforms, datasets\n",
     "import torch\n",
     "from torch import nn\n",
+    "import matplotlib.pyplot as plt\n",
+    "import struct\n",
+    "import os\n",
     "\n",
-    "from model import ResNetMnist # my model\n",
-    "from export import export_model\n",
-    "from export import export_modelq8"
+    "import torchvision.models as models\n",
+    "from torchvision.models import ResNet18_Weights\n",
+    "import torchvision.transforms as transforms\n",
+    "from torchvision.datasets import ImageFolder\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "    print(\"CUDA (GPU) is available.\")\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "id": "66867f52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://s3.amazonaws.com/fast-ai-imageclas/imagenette2.tgz to data/imagenette2.tgz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1557161267/1557161267 [01:32<00:00, 16777967.29it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting data/imagenette2.tgz to data\n"
+     ]
+    }
+   ],
+   "source": [
+    "#|export\n",
+    "import torchvision\n",
+    "from torchvision.datasets.utils import download_and_extract_archive\n",
+    "\n",
+    "dir_path = \"data\"\n",
+    "os.makedirs(dir_path, exist_ok=True)\n",
+    "\n",
+    "# URL for Imagenette (Full size)\n",
+    "url = \"https://s3.amazonaws.com/fast-ai-imageclas/imagenette2.tgz\"\n",
+    "\n",
+    "# Download and extract the dataset\n",
+    "download_and_extract_archive(url, download_root=dir_path, extract_root=dir_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "83912d25",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
-    "def generate_dataloaderMNIST(batch_size=32):\n",
-    "    transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))])\n",
-    "    \n",
-    "    trainset = torchvision.datasets.MNIST(\"./data\", train=True, download=True, transform=transform)\n",
-    "    trainloader = torch.utils.data.DataLoader(trainset, batch_size=batch_size, shuffle=True)\n",
-    "    \n",
-    "    testset = torchvision.datasets.MNIST(\"./data\", train=False, download=True, transform=transform)\n",
-    "    testloader = torch.utils.data.DataLoader(testset, batch_size=batch_size, shuffle=False)\n",
-    "    \n",
-    "    return trainloader, testloader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "d94fba77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_dataloaderImagenette(batch_size=32):\n",
+    "def generate_dataloader(batch_size=32):\n",
     "    transform = transforms.Compose([\n",
-    "        transforms.Resize(256), \n",
-    "        transforms.CenterCrop(224),        \n",
-    "        transforms.ToTensor(),             \n",
-    "        transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]) \n",
+    "        transforms.Resize((224, 224)),  # Resize the image to fit ResNet input size\n",
+    "        transforms.ToTensor(),\n",
     "    ])\n",
-    "    #data = torchvision.datasets.Imagenette(\"./data\", download=True)\n",
-    "    traindataset = datasets.ImageFolder(root='./data/imagenette2/train', transform=transform)\n",
-    "    testdataset = datasets.ImageFolder(root='./data/imagenette2/val', transform=transform)\n",
+    "    \n",
+    "    train_dataset = ImageFolder(root=f\"data/imagenette2/train\", transform=transform)\n",
+    "    test_dataset = ImageFolder(root=f\"data/imagenette2/val\", transform=transform)\n",
     "\n",
-    "    trainloader = torch.utils.data.DataLoader(traindataset, batch_size=batch_size, shuffle=True)\n",
-    "    testloader = torch.utils.data.DataLoader(testdataset, batch_size=batch_size, shuffle=False)\n",
+    "    trainloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True,\n",
+    "                             num_workers=torch.get_num_threads())\n",
+    "    testloader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False,\n",
+    "                            num_workers=torch.get_num_threads())\n",
     "    \n",
     "    return trainloader, testloader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "b894e2a5",
    "metadata": {},
    "outputs": [],
@@ -96,6 +141,7 @@
     "\n",
     "        # Fetch the first batch\n",
     "        for inputs, targets in testloader:\n",
+    "            inputs, targets = inputs.to(device), targets.to(device)\n",
     "            outputs = model(inputs)\n",
     "            vloss += loss_fn(outputs, targets).item()\n",
     "            _, predicted = torch.max(outputs.data, 1)\n",
@@ -108,13 +154,14 @@
     "    # training\n",
     "    loss_fn = nn.CrossEntropyLoss()\n",
     "    opt = torch.optim.AdamW(model.parameters(), lr=0.001)\n",
-    "    trainloader, testloader = generate_dataloaderMNIST()\n",
+    "    trainloader, testloader = generate_dataloader()\n",
     "\n",
     "    for epoch in range(1):\n",
     "\n",
     "        model.train()\n",
     "        tloss = 0\n",
     "        for inputs, targets in trainloader:\n",
+    "            inputs, targets = inputs.to(device), targets.to(device)\n",
     "            opt.zero_grad()\n",
     "            out = model(inputs)\n",
     "            loss = loss_fn(out, targets)\n",
@@ -131,155 +178,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "58550418",
+   "execution_count": null,
+   "id": "05334d30",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LOSS train 0.10019624354364351 valid 0.07671000730594435 accuracy 0.97420\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = ResNetMnist()\n",
-    "train_model(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "0e418333",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ResNetMnist(\n",
-      "  (conv1): Conv2d(1, 64, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2), bias=False)\n",
-      "  (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (act): ReLU(inplace=True)\n",
-      "  (maxpool): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
-      "  (group1): GroupOfBlocks(\n",
-      "    (group): Sequential(\n",
-      "      (0): Block(\n",
-      "        (block): Sequential(\n",
-      "          (0): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-      "          (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "          (2): ReLU()\n",
-      "          (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-      "          (4): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "        )\n",
-      "        (skip_connection): Identity()\n",
-      "        (act): ReLU()\n",
-      "      )\n",
-      "      (1): Block(\n",
-      "        (block): Sequential(\n",
-      "          (0): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-      "          (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "          (2): ReLU()\n",
-      "          (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-      "          (4): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "        )\n",
-      "        (skip_connection): Identity()\n",
-      "        (act): ReLU()\n",
-      "      )\n",
-      "    )\n",
-      "  )\n",
-      "  (group2): GroupOfBlocks(\n",
-      "    (group): Sequential(\n",
-      "      (0): Block(\n",
-      "        (block): Sequential(\n",
-      "          (0): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-      "          (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "          (2): ReLU()\n",
-      "          (3): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-      "          (4): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "        )\n",
-      "        (skip_connection): Sequential(\n",
-      "          (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-      "          (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "        )\n",
-      "        (act): ReLU()\n",
-      "      )\n",
-      "      (1): Block(\n",
-      "        (block): Sequential(\n",
-      "          (0): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-      "          (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "          (2): ReLU()\n",
-      "          (3): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-      "          (4): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "        )\n",
-      "        (skip_connection): Identity()\n",
-      "        (act): ReLU()\n",
-      "      )\n",
-      "    )\n",
-      "  )\n",
-      "  (group3): GroupOfBlocks(\n",
-      "    (group): Sequential(\n",
-      "      (0): Block(\n",
-      "        (block): Sequential(\n",
-      "          (0): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-      "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "          (2): ReLU()\n",
-      "          (3): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-      "          (4): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "        )\n",
-      "        (skip_connection): Sequential(\n",
-      "          (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-      "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "        )\n",
-      "        (act): ReLU()\n",
-      "      )\n",
-      "      (1): Block(\n",
-      "        (block): Sequential(\n",
-      "          (0): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-      "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "          (2): ReLU()\n",
-      "          (3): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-      "          (4): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "        )\n",
-      "        (skip_connection): Identity()\n",
-      "        (act): ReLU()\n",
-      "      )\n",
-      "    )\n",
-      "  )\n",
-      "  (avgpool): AvgPool2d(kernel_size=4, stride=1, padding=0)\n",
-      "  (fc): Linear(in_features=256, out_features=10, bias=True)\n",
-      ")\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = torch.load(\"model.pt\")\n",
-    "print(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "c9c920e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wrote model.bin\n"
-     ]
-    }
-   ],
-   "source": [
-    "export_model(model)"
+    "# swap the output layer and freeze all other layers\n",
+    "model = models.resnet18(weights=ResNet18_Weights.IMAGENET1K_V1)\n",
+    "for p in model.parameters():\n",
+    "    p.requires_grad = False\n",
+    "model.fc = nn.Linear(model.fc.in_features, 10)\n",
+    "model.to(device)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "787525d9",
+   "id": "3cddc4de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fine-tuning\n",
+    "#FIX find optimal hyperparameters + maybe unfreeze after training final layer and then train the entire model\n",
+    "train_model(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70ad7114",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, testloader = generate_dataloader()\n",
+    "loss, acc = test_model(model, testloader)\n",
+    "print(\"Accuracy: {:.2f} %\".format(100*acc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1eb5b52c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -301,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
