fix bugs in imagenette preprocessing

--- a/prep.ipynb
+++ b/prep.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "id": "ca1877a1",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "#|export\n",
     "import os\n",
     "import shutil\n",
+    "import random\n",
     "import torchvision\n",
     "from torchvision.datasets.utils import download_and_extract_archive\n",
     "import torchvision.transforms as transforms\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "id": "2e4eaa39",
    "metadata": {},
    "outputs": [
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "id": "599c3560",
    "metadata": {},
    "outputs": [
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "id": "a2b369f0",
    "metadata": {},
    "outputs": [
@@ -125,6 +126,8 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import struct\n",
     "\n",
     "f = open(\"data/imagenette2/val_transformed/0/0\", \"rb\")\n",
     "sizeof_float, nch, h, w = 4, 3, 224, 224\n",
@@ -139,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 18,
    "id": "0754769f",
    "metadata": {},
    "outputs": [],
@@ -148,7 +151,9 @@
     "# create directory containing the subset of `val_transformed`\n",
     "src = \"data/imagenette2/val_transformed\"\n",
     "dst = \"data/imagenette2/val_transformed_subset\"\n",
-    "os.makedirs(dest, exist_ok=True)\n",
+    "if os.path.exists:\n",
+    "    shutil.rmtree(dst)\n",
+    "os.makedirs(dst)\n",
     "seed = 4\n",
     "nsamples = 10\n",
     "\n",
@@ -171,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ebf04a4",
+   "id": "f107dfeb",
    "metadata": {},
    "outputs": [],
    "source": []
