--- a/test_all.ipynb
+++ b/test_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "92120998",
    "metadata": {},
    "outputs": [],
@@ -19,14 +19,14 @@
     "import torch\n",
     "import struct\n",
     "\n",
-    "from export import export_modelq8\n",
+    "from export import export_model, export_modelq8\n",
     "\n",
     "file_path = \"test/data/imagenette2/val_transformed/0/113\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "96cc7f58",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "9d14bf83",
    "metadata": {},
    "outputs": [],
@@ -65,6 +65,7 @@
     "def test_runfiles(quantized=True, file_path=file_path):\n",
     "    \"\"\" test run.c and runq.c works with an acceptable tolerance \"\"\"\n",
     "    # run vanilla model in test mode\n",
+    "    export_model()\n",
     "    command = [\"./run\", \"model.bin\", file_path]\n",
     "    res = execute(command)\n",
     "    assert np.allclose(res, ref, atol=1e-5, rtol=0), \"run.c: Probabilities are not close.\"\n",
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "a582d8ce",
    "metadata": {},
    "outputs": [
@@ -92,6 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "wrote model.bin\n",
       "Quantized (64, 3, 7, 7) to Q8_0 with max error 2.9802322387695312e-08\n",
       "Quantized (64, 64, 3, 3) to Q8_0 with max error 2.9802322387695312e-08\n",
       "Quantized (64, 64, 3, 3) to Q8_0 with max error 7.450580596923828e-09\n",
