--- a/prep.ipynb
+++ b/prep.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ca1877a1",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2e4eaa39",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "599c3560",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "0754769f",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
     "# create directory containing the subset of `val_transformed`\n",
     "src = \"data/imagenette2/val_transformed\"\n",
     "dst = \"data/imagenette2/val_transformed_subset\"\n",
-    "if os.path.exists:\n",
+    "if os.path.exists(dst):\n",
     "    shutil.rmtree(dst)\n",
     "os.makedirs(dst)\n",
     "seed = 4\n",
