--- a/model.ipynb
+++ b/model.ipynb
@@ -2,52 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2a939d4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
-    "import torch\n",
-    "from torch import nn"
+    "import torch.nn as nn\n",
+    "import torchvision.models as models\n",
+    "from torchvision.models import ResNet18_Weights"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b73b2ccc",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
     "class Model(nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, num_classes=10):\n",
     "        super(Model, self).__init__()\n",
-    "        self.nclasses = 10\n",
-    "\n",
-    "        self.conv1 = nn.Conv2d(1, 4, kernel_size=3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(4, 8, kernel_size=3, padding=1)\n",
-    "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
-    "\n",
-    "        self.flatten = nn.Flatten()\n",
-    "        self.fc1 = nn.Linear(8*7*7, 128)\n",
-    "        self.fc2 = nn.Linear(128, self.nclasses)\n",
-    "        self.relu = nn.ReLU()\n",
+    "        self.model = models.resnet18(weights=ResNet18_Weights.IMAGENET1K_V1)\n",
+    "        # swap the output layer and freeze all other layers\n",
+    "        for p in self.model.parameters():\n",
+    "          p.requires_grad = False\n",
+    "        self.model.fc = nn.Linear(self.model.fc.in_features, num_classes)\n",
     "        \n",
     "    def forward(self, x):\n",
-    "        x = self.relu(self.conv1(x))\n",
-    "        x = self.pool(x)\n",
-    "        x = self.pool(self.relu(self.conv2(x)))\n",
-    "        x = self.flatten(x)\n",
-    "        x = self.relu(self.fc1(x))\n",
-    "        x = self.fc2(x)\n",
-    "\n",
-    "        return x"
+    "        return self.model(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "62bf38bb",
    "metadata": {},
    "outputs": [
@@ -61,10 +50,21 @@
    ],
    "source": [
     "# Tests for the above function(s)\n",
+    "import torch\n",
+    "\n",
     "model = Model()\n",
-    "output = model(torch.rand([1, 1,28,28]))\n",
+    "output = model(torch.rand([1,3,224,224]))\n",
+    "print(output.shape)\n",
     "assert output.shape==(1,10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75befe30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -72,6 +72,18 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
