--- a/train.ipynb
+++ b/train.ipynb
@@ -18,49 +18,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4a66b3ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/doyu/mambaforge/lib/python3.9/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: /home/doyu/mambaforge/lib/python3.9/site-packages/torchvision/image.so: undefined symbol: _ZN5torch3jit17parseSchemaOrNameERKSs\n",
-      "  warn(f\"Failed to load image Python extension: {e}\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#|export\n",
-    "import torchvision\n",
-    "from torchvision import transforms\n",
-    "from torch import nn"
+    "import torch\n",
+    "from torch import nn\n",
+    "import torchvision.transforms as transforms\n",
+    "from torchvision.datasets import ImageFolder\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ca6254f6",
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
     "def generate_dataloader(batch_size=32):\n",
-    "    transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))])\n",
-    "    \n",
-    "    trainset = torchvision.datasets.MNIST(\"./data\", train=True, download=True, transform=transform)\n",
-    "    trainloader = torch.utils.data.DataLoader(trainset, batch_size=batch_size, shuffle=True)\n",
-    "    \n",
-    "    testset = torchvision.datasets.MNIST(\"./data\", train=False, download=True, transform=transform)\n",
-    "    testloader = torch.utils.data.DataLoader(testset, batch_size=batch_size, shuffle=False)\n",
-    "    \n",
+    "    transform = transforms.Compose([\n",
+    "        transforms.Resize((224, 224)),  # Resize the image to fit ResNet input size\n",
+    "        transforms.ToTensor(),\n",
+    "    ])\n",
+    "\n",
+    "    train_dataset = ImageFolder(root=f\"data/imagenette2/train\", transform=transform)\n",
+    "    test_dataset = ImageFolder(root=f\"data/imagenette2/val\", transform=transform)\n",
+    "\n",
+    "    trainloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True,\n",
+    "                             num_workers=torch.get_num_threads())\n",
+    "    testloader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False,\n",
+    "                            num_workers=torch.get_num_threads())\n",
+    "\n",
     "    return trainloader, testloader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b894e2a5",
    "metadata": {},
    "outputs": [],
@@ -72,11 +72,15 @@
     "    with torch.no_grad():\n",
     "        vloss = 0.\n",
     "        correct = 0.\n",
-    "        for X,y in testloader:\n",
-    "            out = model(X)\n",
-    "            vloss += loss_fn(out, y).item()\n",
-    "            correct += (torch.argmax(out, 1)==y).float().sum().item()\n",
-    "    \n",
+    "\n",
+    "        # Fetch the first batch\n",
+    "        for inputs, targets in testloader:\n",
+    "            inputs, targets = inputs.to(device), targets.to(device)\n",
+    "            outputs = model(inputs)\n",
+    "            vloss += loss_fn(outputs, targets).item()\n",
+    "            _, predicted = torch.max(outputs.data, 1)\n",
+    "            correct += (predicted==targets).sum().item()\n",
+    "\n",
     "    return vloss/len(testloader),  correct/len(testloader.dataset)\n",
     "\n",
     "def train_model(model):  \n",
@@ -84,34 +88,33 @@
     "    loss_fn = nn.CrossEntropyLoss()\n",
     "    opt = torch.optim.AdamW(model.parameters(), lr=0.001)\n",
     "    trainloader, testloader = generate_dataloader()\n",
-    "\n",
     "    for epoch in range(1):\n",
     "\n",
     "        model.train()\n",
     "        tloss = 0\n",
-    "        for X,y in trainloader:\n",
+    "        for inputs, targets in trainloader:\n",
+    "            inputs, targets = inputs.to(device), targets.to(device)\n",
     "            opt.zero_grad()\n",
-    "            out = model(X)\n",
-    "            loss = loss_fn(out, y)\n",
+    "            out = model(inputs)\n",
+    "            loss = loss_fn(out, targets)\n",
     "            loss.backward()\n",
     "            tloss += loss.item()\n",
     "            opt.step()\n",
-    "\n",
     "        tloss = tloss/len(trainloader)\n",
     "        vloss, correct = test_model(model, testloader)\n",
     "\n",
-    "        print('LOSS train {} valid {} accuracy {:.5f}'.format(tloss, vloss, correct))"
+    "        print('LOSS train {} valid {} accuracy {:.5f}'.format(tloss, vloss, correct))\n",
+    "    torch.save(model, \"model.pt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f3cda315",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "import random\n",
     "seed = 1337\n",
     "torch.manual_seed(seed)\n",
     "torch.cuda.manual_seed(seed)"
@@ -119,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "86ebce92",
    "metadata": {},
    "outputs": [],
@@ -129,21 +132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dc98d0c2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LOSS train 0.26354814784054953 valid 0.0891189479771942 accuracy 0.97410\n",
-      "wrote model.bin\n",
-      "CPU times: user 1min 3s, sys: 3.21 s, total: 1min 7s\n",
-      "Wall time: 11.2 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "from export import export_model\n",
@@ -156,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "229fc300",
    "metadata": {},
    "outputs": [
@@ -164,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss: 0.0891 Accuracy: 97.41 %\n"
+      "Loss: 0.1190 Accuracy: 97.30 %\n"
      ]
     }
    ],
@@ -174,9 +166,17 @@
     "loss, acc = test_model(torch.load(\"model.pt\"), testloader)\n",
     "print(f\"Loss: {loss:.4f} Accuracy: {100*acc:.2f} %\")\n",
     "\n",
-    "assert loss - 0.0891 < 0.0001\n",
+    "assert loss - 0.11901 < 0.0001\n",
     "assert acc - 0.97410 < 0.00001"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab0d8021",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -184,6 +184,18 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
